--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon ./index.js",
     "start": "node index.js"
   },
   "keywords": [],
@@ -16,5 +17,8 @@
     "express": "^4.16.2",
     "graphql": "^0.12.3",
     "graphql-tools": "^2.18.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.14.11"
   }
 }
