Create src directory

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "eventos-backend",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./index.js",
+    "dev": "nodemon --watch src",
     "start": "node index.js"
   },
   "keywords": [],
